# algo

./: .gitignore  README.md  TODO.md  a.out  angle_calcs.r  angle_formed.cpp  build.sh  convex-hull.r  convexhull.cpp  cscope.out  determine_left_or_right_turn.cpp  fastscan.cpp  readfile.cpp  sdltemplate.cpp
convexhull/: CMakeLists.txt  build.sh  convexlib.cpp  convexlib.h  main.cpp  test1.cpp  testbed.cpp
point-in-polygon/: .RData  .Rhistory  CMakeLists.txt  build.sh  main.cpp  nohup.out  piplib.cpp  piplib.h  point-in-polygon.r  rotmat.r  stdalgorithm.cpp  testbed.cpp
std-algorithms/: stdalgorithm.cpp
templates/: CMakeLists.txt  build.sh  main-sdl.cpp
